	* Lasso tool now trims existing clipboard if no selection is present
	* Image->Skew skews image in one or two directions
	* View->Configure Grid sets grid colour preferences
	* "Smart Grid" toggle shows layer boundaries around transparent pixels
	* Gaussian blur effect for images with alpha now is about 40% faster and uses less memory
	* Kuwahara-Nagao blur effect added (edge-preserving blur)
	* Five new edge detection filters added - Sobel, Prewitt, Gradient, Roberts, Laplace
	* Drawing operations on utility channels now respect tool opacity
	* BUGFIX - Polygon line selection now clearer in Windows version
	* BUGFIX - Occasional redraw glitches in paste preview eliminated
	* BUGFIX - "Remove All Layers" wilh layers window closed doesn't cause crash
	* BUGFIX - Pasting in tint mode into indexed images' utility channels now works correctly
	* BUGFIX - Gradient preview now properly shows effect of mask channel on alpha channel

3.21	2008-6-8

	* Russian translation added by Sergey Irupin
	* Spanish translation updated by Antonio Sanchez Leon
	* Galician translation added by Miguel Anxo Bouzada
	* Use 'xdg-open' if available to open HTML help in default browser on Linux
	* Relaxed sanity checking in XPM loader to accept files with malformed headers
	* "Exact Conversion" option added to Palette->Create Quantized
	* Counting used colours now about twice as fast
	* Workaround for bug in libpng versions 1.2.17 - 1.2.24 added (was losing extra channels when loading)
	* BUGFIX - Canvas, view and palette area borders now can't be messed up by theme engines
        * BUGFIX - Persistent rectangle selection now doesn't steal arrow keys from gradient placement tool
	* BUGFIX - Internationalization now works properly in GTK+1
	* BUGFIX - FreeType text rendering quality improved on Windows
	* BUGFIX - Text in active menu items no longer becomes invisible on Windows Vista (fixed in GTK+)
	* BUGFIX - Removable drives are now visible in fileselector on Windows (fixed in GTK+)
