@@ -30,13 +30,18 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* "Smart Grid" toggle shows layer boundaries around transparent pixels
 	* Gaussian blur effect for images with alpha now is about 40% faster and uses less memory
 	* Kuwahara-Nagao blur effect added (edge-preserving blur)
-	* Five new edge detection filters added - Sobel, Prewitt, Gradient, Roberts, Laplace
+	* Dilation and erosion effects added
+	* Seven new edge detection filters added - Sobel, Prewitt, Kirsch, Gradient, Roberts, Laplace, Morphological
 	* Drawing operations on utility channels now respect tool opacity
+	* Drawing in image channel with coupled alpha now ignores drawing modes for alpha channel
+	* Smudge tool now works about two times faster
+	* 12 new blend modes added
 	* BUGFIX - Polygon line selection now clearer in Windows version
 	* BUGFIX - Occasional redraw glitches in paste preview eliminated
 	* BUGFIX - "Remove All Layers" wilh layers window closed doesn't cause crash
 	* BUGFIX - Pasting in tint mode into indexed images' utility channels now works correctly
 	* BUGFIX - Gradient preview now properly shows effect of mask channel on alpha channel
+	* BUGFIX - Alt+S key now opens Selection menu as it should
 
 3.21	2008-6-8
 
